--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auth Demo</title>
+    <title>Secure-Me-Application</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
 <!-- d-flex justify-content-center p-5 -->
 <body class="layout">
     <div class="lg">
-        <img src="logo.png" width="480" height="180"  alt="" srcset="">
+        <img src="img1.png" alt="" srcset="">
     </div>
     <div class="card">
         <div class="card-header">
